Overflow Fix

--- a/js/simplemde/simplemde.css
+++ b/js/simplemde/simplemde.css
@@ -666,7 +666,7 @@ span.CodeMirror-selectedtext {
 	line-height: 1.45;
 	border-radius: 4px;
 	border: thin solid #dfe2e5;
-	overflow: auto;
+	overflow: hidden;
 	margin-left: auto;
 	margin-right: auto;
 }
